Fixed some alignment issues

--- a/src/components/HeroSection/style.css
+++ b/src/components/HeroSection/style.css
@@ -1,8 +1,6 @@
 
 .slider-section {
     flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
     z-index: 1;
 }
 
